# Zonable

./: .gitignore  Cargo.toml  README.md  package.json  rust-toolchain.toml  test_canopy.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.ts
apps/web/src/bootstrap/: app.bootstrap.ts  helpers.ts  render.bridge.ts
apps/web/src/config/: simulation.params.ts
apps/web/src/engine/: camera.controller.ts  postfx.ts  renderer.ts  scene.ts  terrain.ts
apps/web/src/persistence/: adapter.ts  local.adapter.ts
apps/web/src/simulation/: budget.ts  demand.ts  grid.ts  service.coverage.ts  services.ts  zoning.ts
apps/web/src/simulation/workers/: citizens.worker.ts  economy.worker.ts  traffic.worker.ts
apps/web/src/tools/: bulldoze.ts  road.ts  terrain.tool.ts  zone.ts
apps/web/src/types/: index.ts
apps/web/src/ui/: App.tsx  BudgetPanel.tsx  DemandBar.tsx  InfoPanel.tsx  MiniMap.tsx  NotificationToast.tsx  SettingsModal.tsx  Toolbar.tsx
crates/canopy-assets/: Cargo.toml
crates/canopy-assets/src/: format.rs  handle.rs  lib.rs  server.rs  types.rs
crates/canopy-audio/: Cargo.toml
crates/canopy-audio/src/: lib.rs  mixer.rs
crates/canopy-core/: Cargo.toml
crates/canopy-core/src/: app.rs  camera_controller.rs  config.rs  frame.rs  lib.rs  plugin.rs  stage.rs
crates/canopy-ecs/: Cargo.toml
crates/canopy-ecs/src/: archetype.rs  command.rs  component.rs  entity.rs  lib.rs  query.rs  storage.rs  system.rs  world.rs
crates/canopy-physics/: Cargo.toml
crates/canopy-physics/src/: components.rs  lib.rs  system.rs  world.rs
crates/canopy-platform/: Cargo.toml
crates/canopy-platform/src/: event.rs  input.rs  lib.rs  window.rs
crates/canopy-renderer/: Cargo.toml
crates/canopy-renderer/src/: camera.rs  components.rs  context.rs  debug.rs  draw.rs  environment.rs  gpu_assets.rs  lib.rs  lod.rs  overlay.rs  pipeline.rs  system.rs
crates/canopy-renderer/src/shaders/: forward.wgsl  gbuffer.wgsl  lighting.wgsl  sky.wgsl
crates/canopy-script/: Cargo.toml
crates/canopy-script/src/: components.rs  decorators.rs  lib.rs  py_app.rs  py_entity.rs  py_input.rs  py_math.rs  py_world.rs  runner.rs
crates/canopy-sim/: Cargo.toml
crates/canopy-sim/src/: agent.rs  budget.rs  economy.rs  events.rs  lib.rs  traffic.rs
crates/canopy-world/: Cargo.toml
crates/canopy-world/src/: chunk.rs  lib.rs  terrain.rs  zone.rs
docs/: architecture.md  canasset-format.md  canscript-api.md  renderer.md
games/zonable/: main.py
games/zonable/assets/: cube.canasset
games/zonable/scripts/: buildings.py
games/zonable/scripts/events/: disasters.py
games/zonable/scripts/queries/: citizens.py
games/zonable/scripts/systems/: population_system.py
tools/canopy-pipeline/: pyproject.toml
tools/canopy-pipeline/canopy_pipeline/: __init__.py  asset_packager.py  canasset.py  cli.py  lod_generator.py  texture_compress.py
