[package]
name = "canopy-assets"
version = "0.1.0"
edition = "2021"
description = "Canopy Engine — Asset runtime and .canasset format"
license = "LicenseRef-Proprietary"

[dependencies]
canopy-ecs = { path = "../canopy-ecs" }

glam = { workspace = true }
bytemuck = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
slotmap = { workspace = true }
