[package]
name = "canopy-ecs"
version = "0.1.0"
edition = "2021"
description = "Canopy Engine — Custom Entity Component System"
license = "LicenseRef-Proprietary"

[dependencies]
# Dense storage and generation counting
slotmap = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
rayon = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }

# Math re-exported so dependents don't need their own glam dep
glam = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
